[gd_scene load_steps=24 format=3 uid="uid://bfegvcssuo345"]

[ext_resource type="Texture2D" uid="uid://dqc1fx288t786" path="res://assets/characters/CowHead.svg" id="1_3jobk"]
[ext_resource type="Script" path="res://scripts/foe.gd" id="1_utyqy"]
[ext_resource type="Script" path="res://components/move_config_component.gd" id="2_q28qb"]
[ext_resource type="Texture2D" uid="uid://c0hhxutkvwkvx" path="res://assets/other/exclamation-mark.svg" id="2_sewou"]
[ext_resource type="Texture2D" uid="uid://b034tkdxjks0l" path="res://assets/other/angry.png" id="3_y12r4"]
[ext_resource type="Script" path="res://components/area_sense_component.gd" id="4_lk7t1"]
[ext_resource type="Script" path="res://components/state_machine_component.gd" id="5_5mjh0"]
[ext_resource type="Script" path="res://components/states/idle_foe_state.gd" id="6_ksn7n"]
[ext_resource type="Script" path="res://components/states/chasing_foe_state.gd" id="7_jjodk"]
[ext_resource type="Script" path="res://components/states/stun_foe_state.gd" id="9_cpn8n"]
[ext_resource type="Script" path="res://components/states/go_to_post.gd" id="10_jjkab"]
[ext_resource type="Script" path="res://components/states/bum_rush_state.gd" id="12_6nxu8"]
[ext_resource type="AudioStream" uid="uid://biemxi3dg4oi2" path="res://assets/audio/cow.ogg" id="13_cm2ir"]
[ext_resource type="AudioStream" uid="uid://bf2fm76vrxjes" path="res://assets/audio/bull rush.ogg" id="14_oh32k"]
[ext_resource type="AudioStream" uid="uid://bk36w30x1jigt" path="res://assets/audio/bonk.ogg" id="15_vyjcv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c32eb"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_gitk1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shock:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shock:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_efkr4"]
resource_name = "alert"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shock:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1lpjg"]
resource_name = "rage"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Angry:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Angry:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Angry:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_34rkw"]
resource_name = "reset2"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Angry:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ag766"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(2, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u54vq"]
_data = {
"RESET": SubResource("Animation_gitk1"),
"alert": SubResource("Animation_efkr4"),
"rage": SubResource("Animation_1lpjg"),
"reset2": SubResource("Animation_34rkw"),
"shake": SubResource("Animation_ag766")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dk26s"]
radius = 125.0

[node name="Foe" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_utyqy")

[node name="Shock" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.175)
texture = ExtResource("2_sewou")

[node name="Angry" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -16)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_y12r4")

[node name="Visual" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_3jobk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_c32eb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u54vq")
}

[node name="MoveConfigComponent" type="Node" parent="."]
script = ExtResource("2_q28qb")

[node name="AreaSenseComponent" type="Area2D" parent="." node_paths=PackedStringArray("host")]
collision_layer = 16
collision_mask = 2
script = ExtResource("4_lk7t1")
host = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSenseComponent"]
shape = SubResource("CircleShape2D_dk26s")

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("host", "initial_state")]
script = ExtResource("5_5mjh0")
host = NodePath("..")
initial_state = NodePath("IdleFoeState")

[node name="IdleFoeState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("sensor", "action")]
script = ExtResource("6_ksn7n")
sensor = NodePath("../../AreaSenseComponent")
action = NodePath("../ChasingFoeState")

[node name="ChasingFoeState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("animations", "sensor", "goback", "rush")]
script = ExtResource("7_jjodk")
animations = NodePath("../../AnimationPlayer")
sensor = NodePath("../../AreaSenseComponent")
goback = NodePath("../GotoPostState")
rush = NodePath("../BumRushState")

[node name="StunFoeState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("animations", "idle", "action", "stunsfx", "bonksfx")]
script = ExtResource("9_cpn8n")
animations = NodePath("../../AnimationPlayer")
idle = NodePath("../IdleFoeState")
action = NodePath("../ChasingFoeState")
stunsfx = NodePath("../../StunSFX")
bonksfx = NodePath("../../BonkSFX")

[node name="GotoPostState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("sensor", "chasing", "idle")]
script = ExtResource("10_jjkab")
sensor = NodePath("../../AreaSenseComponent")
chasing = NodePath("../ChasingFoeState")
idle = NodePath("../IdleFoeState")

[node name="BumRushState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("animations", "sensor", "chasing", "goback", "rushsfx")]
script = ExtResource("12_6nxu8")
animations = NodePath("../../AnimationPlayer")
sensor = NodePath("../../AreaSenseComponent")
chasing = NodePath("../ChasingFoeState")
goback = NodePath("../GotoPostState")
rushsfx = NodePath("../../RushSFX")

[node name="StunSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_cm2ir")
volume_db = -4.0
bus = &"SFX"

[node name="RushSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_oh32k")
volume_db = -4.0
bus = &"SFX"

[node name="BonkSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_vyjcv")
volume_db = -1.0
bus = &"SFX"
